--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Kashan Ali Qazi - Home</title>
+		<title>Kashan Ali Qazi - Contact</title>
 		<!--adding reset css-->
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -19,9 +19,9 @@
 					</div>
 					<!-- navigation pane -->
 					<nav>
-						<a id="contact" href="contact.html">Contact</a>
+						<a id="contact" href="#">Contact</a>
 						<a id="portfolio" href="portfolio.html">Portfolio</a>
-						<a id="about" href="#">About</a>
+						<a id="about" href="index.html">About</a>
 					</nav>
 				</div>
 		</header>
