--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,8 @@
 					<!-- navigation pane -->
 					<nav>
 						<a id="contact" href="contact.html">Contact</a>
-						<a id="portfolio" href="portfolio.html">Portfolio</a>
-						<a id="about" href="#">About</a>
+						<a id="portfolio" href="#">Portfolio</a>
+						<a id="about" href="index.html">About</a>
 					</nav>
 				</div>
 		</header>
@@ -58,7 +58,7 @@
 				<a href="#">
 					<div class="container">
 						<p class="captions">Rock Paper Scissors</p>
-						<img class="thumbnails" src="assets/images/linux.jpg" alt="hangman">
+						<img class="thumbnails" src="assets/images/linux.jpg" alt="Rock Paper Scissors">
 					</div>
 				</a>
 			</section>
