--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 		<title>Kashan Ali Qazi - Contact</title>
 		<!--adding reset css-->
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<!--my stylesheet-->
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 	</head>
@@ -26,6 +27,7 @@
 				</div>
 		</header>
 		<!-- division for main content-->
+
 		<div id="wrapper">
 			<section class="mainBody">
 				<h1 id="mainHeading">Contact</h1>
@@ -37,8 +39,7 @@
 					Message<br>
 					<textarea class="textArea" name="Message"></textarea>
 					<br><br>
-					<input type="Submit" name="" id="submitButton"></button>
-				</form>
+					<input type="Submit" name="" id="submitButton">
 			
 			</section>
 			<!-- division for the sidebar -->
