--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Kashan Ali Qazi - Home</title>
 		<!--reset css-->
 		<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+		<!--my stylesheet-->
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	</head>
 	<body>
@@ -22,11 +23,11 @@
 						<a id="portfolio" href="portfolio.html">Portfolio</a>
 						<a id="about" href="#">About</a>
 					</nav>
-				</div>
+				</div> <!--/.headWrapper stops here-->
 		</header>
 		<!-- setting a wrapper to isolating header and footer from the rest of the content-->
 		<div id="wrapper">
-				<!-- division for main content-->
+			<!-- division for main content-->
 			<section class="mainBody">
 				<h1 id ="mainHeading">About Me</h1>
 				<img id="self" src="assets/images/self.jpg" alt="Kashan Ali Qazi">
@@ -40,7 +41,7 @@
 					<p>Currently, I am enrolled in web developer bootcamp, through UT Austin Center for Professional Education, where I am learning ins and outs of full stack web-app development. Upon graduation, I plan on using my newly learned skills, along with my work experience, to create new software solutions for the oil and gas industry.
 					</p>
 				</section>
-			</section>
+			</section> <!--main body ends here-->
 			<!-- division for the sidebar -->
 			<aside class="sideBar">
 				<h2 id="sideHeading">Connect With Me</h2>
@@ -62,6 +63,5 @@
 			<footer>
 				&#169; Copyright 2016 Kashan Ali Qazi
 			</footer>
-		<!-- </div> -->
 	</body>
 </html>
