--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 						<a id="portfolio" href="#">Portfolio</a>
 						<a id="about" href="index.html">About</a>
 					</nav>
-				</div>
+				</div> <!-- division for headWrapper starts here-->
 		</header>
 		<!-- setting a wrapper to style the entire content of the page and isolating header and footer-->
 		<div id="wrapper">
@@ -61,7 +61,7 @@
 						<img class="thumbnails" src="assets/images/linux.jpg" alt="Rock Paper Scissors">
 					</div>
 				</a>
-			</section>
+			</section><!--mainBody ends here-->
 			<!-- division for the sidebar -->
 			<aside class="sideBar">
 				<h2 id="sideHeading">Connect With Me</h2>
