Added components to make this a proper portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,35 +30,41 @@
 			<!-- division for main content-->
 			<section class="mainBody">
 				<h1 id="mainHeading">Portfolio</h1>
-				<a href="#">
+				<a href="https://frozen-reef-25187.herokuapp.com/">
 					<div class="container">	
-						<p class="captions">Hangman</p>
-						<img class="thumbnails" src="assets/images/bike.jpg" alt="hangman">
+						<p class="captions">Shiplify</p>
+						<img class="thumbnails" src="assets/images/shipment.jpg" alt="Shipping Containers">
 					</div>
 				</a>
 
-				 <a href="#">
+				 <a href="https://mysterious-fortress-26926.herokuapp.com/">
 					<div class="container">
-						<p class="captions">RPG Game</p>
-						<img class="thumbnails" src="assets/images/vegas.jpg" alt="RPG Game"> 
+						<p class="captions">Neighbor Network</p>
+						<img class="thumbnails" src="assets/images/neighborhood.jpg" alt="Neighborhood"> 
 					</div>	
 				</a>
-				<a href="#">
+				<a href="https://serene-journey-31658.herokuapp.com/">
 					<div class="container">
-						<p class="captions">Trivia Game</p>
-						<img class="thumbnails" src="assets/images/board.jpg" alt="Trivia">
+						<p class="captions">Texas Trivia</p>
+						<img class="thumbnails" src="assets/images/wallPaper.jpg" alt="Texas Flag">
 					</div>
 				</a>
-				<a href="#">
+				<a href="https://nameless-forest-81434.herokuapp.com/">
 					<div class="container">
-						<p class="captions">Rutgers Info Widget</p>
-						<img class="thumbnails" src="assets/images/lambo.jpg" alt="hangman">
+						<p class="captions">Crystal Collector</p>
+						<img class="thumbnails" src="assets/images/diamond.jpg" alt="Diamond">
 					</div>
 				</a>
-				<a href="#">
+				<a href="https://arcane-plateau-42164.herokuapp.com/">
 					<div class="container">
-						<p class="captions">Rock Paper Scissors</p>
-						<img class="thumbnails" src="assets/images/linux.jpg" alt="Rock Paper Scissors">
+						<p class="captions">Burger Joint</p>
+						<img class="thumbnails" src="assets/images/burger.jpg" alt="Rock Paper Scissors">
+					</div>
+				</a>
+				<a href="https://pure-chamber-95149.herokuapp.com/">
+					<div class="container">
+						<p class="captions">Friend Finder</p>
+						<img class="thumbnails" src="assets/images/friends.jpg" alt="Rock Paper Scissors">
 					</div>
 				</a>
 			</section><!--mainBody ends here-->
