--- a/portfolio.html
+++ b/portfolio.html
@@ -30,38 +30,38 @@
 			<!-- division for main content-->
 			<section class="mainBody">
 				<h1 id="mainHeading">Portfolio</h1>
-				<a href="https://frozen-reef-25187.herokuapp.com/">
+				<a target="_blank" href="https://frozen-reef-25187.herokuapp.com/">
 					<div class="container">	
 						<p class="captions">Shiplify</p>
 						<img class="thumbnails" src="assets/images/shipment.jpg" alt="Shipping Containers">
 					</div>
 				</a>
 
-				 <a href="https://mysterious-fortress-26926.herokuapp.com/">
+				 <a target="_blank" href="https://mysterious-fortress-26926.herokuapp.com/">
 					<div class="container">
 						<p class="captions">Neighbor Network</p>
 						<img class="thumbnails" src="assets/images/neighborhood.jpg" alt="Neighborhood"> 
 					</div>	
 				</a>
-				<a href="https://serene-journey-31658.herokuapp.com/">
+				<a target="_blank" href="https://serene-journey-31658.herokuapp.com/">
 					<div class="container">
 						<p class="captions">Texas Trivia</p>
 						<img class="thumbnails" src="assets/images/wallPaper.jpg" alt="Texas Flag">
 					</div>
 				</a>
-				<a href="https://nameless-forest-81434.herokuapp.com/">
+				<a target="_blank" href="https://nameless-forest-81434.herokuapp.com/">
 					<div class="container">
 						<p class="captions">Crystal Collector</p>
 						<img class="thumbnails" src="assets/images/diamond.jpg" alt="Diamond">
 					</div>
 				</a>
-				<a href="https://arcane-plateau-42164.herokuapp.com/">
+				<a target="_blank" href="https://arcane-plateau-42164.herokuapp.com/">
 					<div class="container">
 						<p class="captions">Burger Joint</p>
 						<img class="thumbnails" src="assets/images/burger.jpg" alt="Rock Paper Scissors">
 					</div>
 				</a>
-				<a href="https://pure-chamber-95149.herokuapp.com/">
+				<a target="_blank" href="https://pure-chamber-95149.herokuapp.com/">
 					<div class="container">
 						<p class="captions">Friend Finder</p>
 						<img class="thumbnails" src="assets/images/friends.jpg" alt="Rock Paper Scissors">
